--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -23,4 +23,6 @@
 
         <div class="form-container">
           <label class="visually-hidden" for="phone">Phone</label>
-          <input class="form-input" type="tel" id="phone" placeholder="Phone" data-i18n-placeholder="form.phon
+          <input class="form-input" type="tel" id="phone" placeholder="Phone" data-i18n-placeholder="form.phone"
+            pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$" title="Формат: +38 (0XX) XXX-XX-XX" required />
+        </div>
