--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -5,9 +5,9 @@
     </h2>
 
     <div class="form-img-container">
-      <p class="leave-item-text-up" data-i18n="form_description">
-        Please use the form below to contact us. Enter your name, email, and
-        message and we'll get back to you shortly.
+      <p class="leave-item-text-up" data-i18n-html="form_description">
+        <!-- Please use the form below to contact us. Enter your name, email, and
+        message and we'll get back to you shortly. -->
       </p>
 
     <form id="contact-form" class="leave-form">
@@ -17,30 +17,30 @@
     
       <div class="form-container">
         <label class="visually-hidden" for="user-name" data-i18n="form_name_label">
-          Name
+          <!-- Name -->
         </label>
         <input class="form-input" type="text" id="user-name" name="user_name" placeholder="Name"
           data-i18n-placeholder="form_name_placeholder" required />
       </div>
     
       <div class="form-container">
-        <label class="visually-hidden" for="phone" data-i18n="form_phone_label">
-          Phone
+        <label class="visually-hidden" for="phone" data-i18n-html="form_phone_label">
+          <!-- Phone -->
         </label>
         <input class="form-input" type="tel" id="phone" name="user_phone" placeholder="Phone"
           data-i18n-placeholder="form_phone_placeholder" required />
       </div>
     
       <div class="form-container">
-        <label class="visually-hidden" for="mail" data-i18n="form_email_label">
-          Email
+        <label class="visually-hidden" for="mail" data-i18n-html="form_email_label">
+          <!-- Email -->
         </label>
         <input class="form-input" type="email" id="mail" name="user_email" placeholder="Email"
           data-i18n-placeholder="form_email_placeholder" required />
       </div>
     
       <div class="textarea-container">
-        <label class="visually-hidden" for="user-comment" data-i18n="form_comment_label">
+        <label class="visually-hidden" for="user-comment" data-i18n-html="form_comment_label">
           Comment
         </label>
         <textarea class="form-textarea" id="user-comment" name="message" rows="10" placeholder="Comment"
@@ -55,20 +55,9 @@
       <!-- ⚠️ текст БЕЗ HTML -->
       <p class="leave-item-text-down" data-i18n-html="form_privacy_text"></p>
     
-    </form>
+    </form>    
 
-
-      
-
-        <!-- <p class="leave-item-text-down"
-  data-i18n="form_privacy_text"></p>
-
-          By clicking on "Send" button, you agree to our
-          <a class="text-link leave-item-link-text-down" href="/privacy-policy" target="_blank">
-            Privacy Policy
-          </a>
-          and allow us to use this information for marketing purposes.
-        </p> -->
+        
 
       </form>
     </div>
